--- a/bytebank/src/app/extrato/extrato.component.html
+++ b/bytebank/src/app/extrato/extrato.component.html
@@ -2,23 +2,26 @@
 
 
 <table class="tabela">
-  <thead class="tabela__cabecalho">
-  <th class="tabela__cabecalho__conteudo">Data</th>
-  <th class="tabela__cabecalho__conteudo tabela__conteudo--danger">Valor</th>
-  <th class="tabela__cabecalho__conteudo">Destino</th>
-  </thead>
-  <tbody>
-<!--  Ngfor é uma diretiva Angular que permite percorrer um array, ou qualquer objeto iterável,
-      e exibir cada item do array como elemento na tela. -->
-  <!--teremos uma TRANSFERENCIA dentro de uma coleção de TRANSFERENCIAS-->
-  <tr *ngFor="let transferencia of transferencias" class="tabela__linha">
-    <td class="tabela__conteudo"> {{transferencia.data | date:"short"}}</td>
-    <td class="tabela__conteudo"> {{transferencia.valor | currency}}</td>
-    <td class="tabela__conteudo"> {{transferencia.destino}}</td>
-<!--    como gerar pipe-->
-  </tr>
-  </tbody>
+    <thead class="tabela__cabecalho">
+    <th class="tabela__cabecalho__conteudo">Data</th>
+    <th class="tabela__cabecalho__conteudo tabela__conteudo--danger">Valor</th>
+    <th class="tabela__cabecalho__conteudo">Destino</th>
+    </thead>
+<!--    <tbody *ngIf="!!transferencias; else quantoListaVazia">-->
+    <tbody *ngIf="transferencias?.length; else quantoListaVazia">
+  <!--  Ngfor é uma diretiva Angular que permite percorrer um array, ou qualquer objeto iterável,
+        e exibir cada item do array como elemento na tela. -->
+    <!--teremos uma TRANSFERENCIA dentro de uma coleção de TRANSFERENCIAS-->
+        <tr *ngFor="let transferencia of transferencias" class="tabela__linha">
+          <td class="tabela__conteudo"> {{transferencia.data | date:"short"}}</td>
+          <td class="tabela__conteudo"> {{transferencia.valor | currency}}</td>
+          <td class="tabela__conteudo"> {{transferencia.destino}}</td>
+        </tr>
+    </tbody>
 </table>
+<ng-template #quantoListaVazia>
+  <p>Nenhum dado cadastrado</p>
+</ng-template>
 
 
 
