--- a/bytebank/src/app/extrato/extrato.component.html
+++ b/bytebank/src/app/extrato/extrato.component.html
@@ -8,18 +8,18 @@
     <th class="tabela__cabecalho__conteudo">Destino</th>
     </thead>
 <!--    <tbody *ngIf="!!transferencias; else quantoListaVazia">-->
-    <tbody *ngIf="transferencias?.length; else quantoListaVazia">
+    <tbody *ngIf="transferencias?.length; else quandoListaVazia">
   <!--  Ngfor é uma diretiva Angular que permite percorrer um array, ou qualquer objeto iterável,
         e exibir cada item do array como elemento na tela. -->
     <!--teremos uma TRANSFERENCIA dentro de uma coleção de TRANSFERENCIAS-->
-        <tr *ngFor="let transferencia of transferencias" class="tabela__linha">
-          <td class="tabela__conteudo"> {{transferencia.data | date:"short"}}</td>
-          <td class="tabela__conteudo"> {{transferencia.valor | currency}}</td>
-          <td class="tabela__conteudo"> {{transferencia.destino}}</td>
+        <tr *ngFor="let intem of transferencias" class="tabela__linha">
+          <td class="tabela__conteudo"> {{intem.data | date:"short"}}</td>
+          <td class="tabela__conteudo"> {{intem.valor | currency}}</td>
+          <td class="tabela__conteudo"> {{intem.destino}}</td>
         </tr>
     </tbody>
 </table>
-<ng-template #quantoListaVazia>
+<ng-template #quandoListaVazia>
   <p>Nenhum dado cadastrado</p>
 </ng-template>
 
