--- a/bytebank/src/app/extrato/extrato.component.html
+++ b/bytebank/src/app/extrato/extrato.component.html
@@ -1,4 +1,5 @@
-
+<section class="container">
+  <h2>Transferências</h2>
 <table class="tabela">
     <thead class="tabela__cabecalho">
     <th class="tabela__cabecalho__conteudo">Data</th>
@@ -20,6 +21,6 @@
 <ng-template #quandoListaVazia>
   <p>Nenhum dado cadastrado</p>
 </ng-template>
-
+</section>
 
 
