--- a/bytebank/src/app/nova-transferencia/nova-transferencia.component.html
+++ b/bytebank/src/app/nova-transferencia/nova-transferencia.component.html
@@ -13,7 +13,7 @@
   </div>
 
   <div class="botao-wrapper">
-  <button class="botao" type="submit">tranferdasdasdas</button>
+  <button class="botao" type="submit" routerLink="extrato">tranferdasdasdas</button>
   </div>
 </form>
 </section>
