--- a/bytebank/src/app/nova-transferencia/nova-transferencia.component.html
+++ b/bytebank/src/app/nova-transferencia/nova-transferencia.component.html
@@ -1,19 +1,22 @@
 <section class="container">
-<!-- O EVENTO NG SUBMIT VAI SER DISPARADO SEMPRE QUE O FORMULARIO HOUVER UM SUBMIT-->
-<!--  se chama EVENT BIND = PASSANDO UM EVENTO PARA UMA PROPRIEDADE INTERNA DO ANGULAR-->
-<form class="formulario" (ngSubmit)="transferir()" >
-  <h2 class="formulario__titulo">Nova transferencia</h2>
-  <div class="form-field">
-    <label class="form-field__label" for="valor">Valor</label>
-    <input class="form-field__input" autocomplete="off" id="valor" type="number" [(ngModel)]="valor" name="valor">
-  </div>
-  <div class="form-field">
-    <label class="form-field__label" for="destino">Destino</label>
-    <input class="form-field__input" autocomplete="off" id="destino" type="text" [(ngModel)]="destino" name="destino">
-  </div>
+  <!-- O EVENTO NG SUBMIT VAI SER DISPARADO SEMPRE QUE O FORMULARIO HOUVER UM SUBMIT-->
+  <!--  se chama EVENT BIND = PASSANDO UM EVENTO PARA UMA PROPRIEDADE INTERNA DO ANGULAR-->
+  <form class="formulario" (ngSubmit)="transferir()" >
+  <!--  <h2 class="formulario__titulo" *ngIf="novaTransferencia;">{{this.novaTransferencia}}</h2>-->
+  <!--  <h2 class="formulario__titulo" *ngIf="!!novaTransferencia;">{{this.atualizarTransferencia}}</h2>-->
+    <div class="form-field">
 
-  <div class="botao-wrapper">
-  <button class="botao" type="submit" routerLink="extrato">tranferdasdasdas</button>
-  </div>
-</form>
+  <!--{{editData.valor}}-->
+      <label class="form-field__label" for="valor">Valor</label>
+      <input class="form-field__input" autocomplete="off" id="valor" type="number" [(ngModel)]="valor"  name="valor">
+    </div>
+    <div class="form-field">
+      <label class="form-field__label" for="destino">Destino</label>
+      <input class="form-field__input" autocomplete="off" id="destino" type="text" [(ngModel)]="destino"   name="destino">
+    </div>
+
+    <div class="botao-wrapper">
+    <button class="botao" type="submit">Salvar</button>
+    </div>
+  </form>
 </section>
